# EmulatorForJ2ME

./: .gitignore  .gitmodules  Các lệnh command hay của AI.txt  J2ME_Loader_Analysis.md  KMP_Migration_Plan.md  handoff_report.md  implementation_plan.md  old_conversation.txt  task.md  task_1.md  Đánh Giá Develop J2ME Emulator App - J2ME Loader.csv
J2ME-KMP-Sample/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
J2ME-KMP-Sample/androidApp/: build.gradle.kts
J2ME-KMP-Sample/docs/: README.md  chat_history.md
J2ME-KMP-Sample/docs/Implementation_Plan/: Implementation_Plan_v22.md  implementation_plan_10.md  implementation_plan_11.md  implementation_plan_12.md  implementation_plan_13.md  implementation_plan_14.md  implementation_plan_15.md  implementation_plan_151.md  implementation_plan_152.md  implementation_plan_154.md  implementation_plan_155.md  implementation_plan_156.md  implementation_plan_16.md  implementation_plan_19.md  implementation_plan_2.md  implementation_plan_20.md  implementation_plan_21.md  implementation_plan_22.md  implementation_plan_23.md  implementation_plan_24.md  implementation_plan_26.md  implementation_plan_3.md  implementation_plan_4.md  implementation_plan_5.md  implementation_plan_6_file_picker.md  implementation_plan_7.md  implementation_plan_8.md  implementation_plan_9.md  walkthrough_10.md  walkthrough_11.md  walkthrough_12.md  walkthrough_13.md  walkthrough_14.md  (+16 more)
J2ME-KMP-Sample/nativeMain/: CMakeLists.txt
J2ME-KMP-Sample/nativeMain/bridge/: android_jni_bridge.cpp
J2ME-KMP-Sample/shared/: build.gradle.kts
(+54 files in other folders)
